# taiga

./: Cargo.toml  README.md
plugins/pomodoro/: Cargo.toml
plugins/pomodoro/src/: audio.rs  break_window.rs  client.rs  config.rs  daemon.rs  ipc.rs  lib.rs
plugins/tui/: Cargo.toml
plugins/tui/src/: app.rs  lib.rs  task_storage.rs  ui.rs
src/: cli.rs  client.rs  daemon.rs  date_parser.rs  display.rs  error.rs  main.rs  plugin.rs  plugin_manager.rs  task.rs
taiga-cli/: Cargo.toml  build.rs
taiga-cli/src/: cli.rs  config.rs  display.rs  error.rs  main.rs  plugin.rs  plugin_manager.rs  storage.rs
taiga-core/: Cargo.toml
taiga-core/src/: date.rs  error.rs  filter.rs  lib.rs  task.rs
taiga-plugin-api/: Cargo.toml
taiga-plugin-api/src/: lib.rs
taiga-plugin-api/src/daemon/: client.rs  ipc.rs  mod.rs  socket.rs  traits.rs
