[package]
name = "taiga-cli"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "CLI interface for Taiga task manager"
repository = "https://github.com/honyoP/taiginator"
readme = "../README.md"
keywords = ["task", "todo", "productivity", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "taiga"
path = "src/main.rs"

[package.metadata.taiga]
codename = "YATTA (Yet Another Terminal Task App)"

[dependencies]
taiga-core = { version = "0.2.0", path = "../taiga-core" }
taiga-plugin-api = { version = "0.1.0", path = "../taiga-plugin-api" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "2.0"
dirs = "6.0"
directories = "6.0"
colored = "2.1"
atty = "0.2"
libloading = "0.8"
async-trait = "0.1"
interprocess = { version = "2.2", features = ["tokio"] }
notify-rust = "4.11"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
thiserror = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
