[package]
name = "taiga-plugin-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Plugin API for Taiga task manager"

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["process", "io-util", "full"] }
interprocess = { version = "2.2", features = ["tokio"] }
