[package]
name = "taiga-tui-plugin"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "TUI interface plugin for Taiga"

[lib]
crate-type = ["cdylib"]

[dependencies]
taiga-plugin-api = { path = "../../taiga-plugin-api" }
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
regex = "1.11"
